removed phone/email from website and just left form for contact

--- a/StopFlood/index.html
+++ b/StopFlood/index.html
@@ -290,7 +290,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's get in touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start making your home safer and more practical? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Ready to start making your home safer and more practical? That's great! Send us an email using the form below and we will get back to you as soon as possible!</p>
 
                     <form method="POST" name="contactform" action="contact-form-handler.php"> 
                     <p>
@@ -319,16 +319,16 @@
                     </script>
 
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
+                <!-- <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
                     <p>(604)-888-5250</p>
-                </div>
-                <div class="col-lg-4 text-center">
+                </div> -->
+                <!-- <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
                     <p><a href="mailto:info@stopflood.ca">info@stopflood.ca</a></p>
 
                     <script language="JavaScript" src="scripts/gen_validatorv31.js" type="text/javascript"></script>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
